Changed xy to point to own repo

--- a/src/mathjaxheader_src.html
+++ b/src/mathjaxheader_src.html
@@ -6,7 +6,7 @@ MathJax.Hub.Config({
     styles: {".MathJax_Preview": {visibility: "hidden"}}
   },
     tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]},
-  TeX: {extensions: ["AMSmath.js","AMSsymbols.js","https://sonoisa.github.io/xyjax_ext/xypic.js"]}
+  TeX: {extensions: ["AMSmath.js","AMSsymbols.js","https://mmasdeu.github.io/teoriadegalois/xypic.js"]}
 });
 </script>
 <script type="text/javascript" async
