Added some more theory, fixed https link

--- a/src/mathjaxheader_src.html
+++ b/src/mathjaxheader_src.html
@@ -11,5 +11,5 @@ MathJax.Hub.Config({
 });
 </script>
 <script type="text/javascript"
-src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
